fix height uneven heights of list items

--- a/src/components/list.scss
+++ b/src/components/list.scss
@@ -28,6 +28,11 @@
       }
     }
 
+    /* DESCRIPTION */
+    .description {
+      padding: 0.5rem;
+    }
+
     /* RIGHT BOX */
     .right-box {
       display: flex;
